UI changes(Remove right filter, Add measurement fixes, cart color change, background color change, logo left align, remove menu, add border theme color to filter)

--- a/DemoSite/site/src/main/webapp/css/menu1.css
+++ b/DemoSite/site/src/main/webapp/css/menu1.css
@@ -13,6 +13,7 @@
   }
 
   .wrapper{
+  	display: none;
     font-family:Arial, Helvetica, sans-serif;
     margin-top:50px;
     margin-left:50px;
